--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^8.18.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
-    "pdf-parse": "^2.4.5"
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
